--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic3-start-theme",
+  "name": "meals-app",
   "version": "0.0.3",
   "author": "João Firmino <firminoata@gmail.com>",
   "homepage": "https://market.ionicframework.com/themes/ionic3-start-theme",
@@ -25,7 +25,7 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "cordova-android": "^6.3.0",
+    "cordova-android": "6.3.0",
     "cordova-ios": "^4.4.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.6",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
-    "ionic": "3.19.0",
+    "ionic": "3.20.0",
     "typescript": "2.3.4"
   },
   "description": "Ionic 3 Start Theme",
